--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,8 +14,8 @@
       <nav id="nav" class="nav">
 	<ul class="gen_nav">
 	  <li><a href="/">Home</a></li>
-	  <li><a href="/about">About</a></li>
-	  <li><a href="/contact">Contact</a></li>
-	  <li><a href="/colophon">Colophon</a></li>
+	  <li><a href="/blog.html">Blog</a></li>
+	  <li><a href="/contact.html">Contact</a></li>
+	  <li><a href="/colophon.html">Colophon</a></li>
 	</ul>
       </nav>
