--- a/css/gavin.css
+++ b/css/gavin.css
@@ -99,12 +99,12 @@ a                { font-family: "body";
 /* 
       sizes 
 */
-html        { font-size: 62.5%; }                          /* base size:    10px */
+html        { font-size: 62.5%; }                           /* base size:    10px */
 body        { font-size: 160%;  line-height: 2;          }  /* body size:    16px; line height: 32px */
 h1          { font-size: 250%;  line-height: 1.20;       }  /* title size:   40px; line height: 48px */
 h1 span,
 h2 span     { font-size: 100%;  line-height: 1.20;       }  /* alt size:     40px; line height: 48px */
-/* h2       { font-size:     ;  line-height:     ;       }  /* subhead size:   px; line height:   px */
+h2          { font-size: 200%;  line-height: 1.5;        }  /* page size:    32px; line height: 48px */
 h3          { font-size: 150%;  line-height: 1.33333333; }  /* article size: 24px; line height: 32px */
 nav ul li a { font-size: 1.5em; line-height: 1.20;       }  /* anchor size:  24px; line height: 32px */ 
 
@@ -126,7 +126,7 @@ h1 {
      letter-spacing: -.04em; 
      font-weight:     normal;
 }
-h2 { font-weight:     normal; }
+h2,
 h3 {
      font-weight:     normal;
      max-width:       18.66667em; /* measure of title line */
@@ -161,7 +161,7 @@ h1 span, h2 span, a { color:            #800;    }
 }
 
 h1     { padding: 2.4em 0 1.2em 0;   }
-h3     { margin-bottom: 1.33333em;   }
+h3,h3  { margin-bottom: 1.33333em;   }
 p      { margin: 0; padding: 0;      }
 .gen_nav {
     width: 100%;
@@ -287,8 +287,8 @@ nav ul a { transition-property: color; transition-duration: 1s; }
 
 /* measure change for larger viewport . . . */
 @media ( min-width: 500px ) {
-    p  { max-width: 34em;       }
-    h3 { max-width: 22.66667em; }
+    p     { max-width: 34em;       }
+    h2,h3 { max-width: 22.66667em; }
 }
 /* . . . as do font sizes */
 @media ( min-width: 600px ) {
