--- a/css/gavin.css
+++ b/css/gavin.css
@@ -87,9 +87,9 @@ html {
            }
 
 html, main       { font-family: "body";          }
-h1, h2           { font-family: "title-main";    }
+h1               { font-family: "title-main";    }
 h1 span, h2 span { font-family: "title-alt";     }
-h3               { font-family: "title-article"; }
+h2, h3           { font-family: "title-article"; }
 a                { font-family: "body";
                    font-feature-settings: "calt", /* contextual alternatives */
 					  "kern", /* kerning */
@@ -160,9 +160,10 @@ h1 span, h2 span, a { color:            #800;    }
   box-sizing: border-box;
 }
 
-h1     { padding: 2.4em 0 1.2em 0;   }
-h3,h3  { margin-bottom: 1.33333em;   }
-p      { margin: 0; padding: 0;      }
+h1          { padding: 2.4em 0 1.2em 0;   }
+h3, h2, h3  { margin-bottom: 1.33333em;   }
+.post_title { margin-bottom: 0;           }
+p           { margin: 0; padding: 0;      }
 .gen_nav {
     width: 100%;
     max-width: 34em;
