--- a/css/gavin.css
+++ b/css/gavin.css
@@ -164,6 +164,16 @@ h1          { padding: 2.4em 0 1.2em 0;   }
 h3, h2, h3  { margin-bottom: 1.33333em;   }
 .post_title { margin-bottom: 0;           }
 p           { margin: 0; padding: 0;      }
+.date {
+    font-family: "body-bold";
+    float: left;
+    clear: none;
+}
+.excerpt {
+    max-height: 6em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .gen_nav {
     width: 100%;
     max-width: 34em;
