--- a/css/gavin.css
+++ b/css/gavin.css
@@ -133,6 +133,9 @@ h3 {
 }
 p               { text-indent: 1em; }
 p:first-of-type { text-indent: 0;   }
+.excerpt p:first-of-type {
+    text-indent: 1em;
+}
 
 
 
@@ -164,6 +167,9 @@ h1          { padding: 2.4em 0 1.2em 0;   }
 h3, h2, h3  { margin-bottom: 1.33333em;   }
 .post_title { margin-bottom: 0;           }
 p           { margin: 0; padding: 0;      }
+.post {
+    margin-bottom: 2em;
+}
 .date {
     font-family: "body-bold";
     float: left;
@@ -172,6 +178,7 @@ p           { margin: 0; padding: 0;      }
 .excerpt {
     max-height: 6em;
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
 }
 .gen_nav {
