--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <article>
-  <h3> {{ title }}</h3>
+  <h3> {{ page.title }}</h3>
   <div class="date">
     {{ post.date | date: '%B %d, %Y' }}
   </div>
