--- a/css/gavin.css
+++ b/css/gavin.css
@@ -138,7 +138,6 @@ p:first-of-type { text-indent: 0;   }
 }
 
 
-
 /*
    2. Colors
    ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,, */
@@ -147,6 +146,11 @@ p:first-of-type { text-indent: 0;   }
 h1 span, h2 span, a { color:            #800;    }
             a:hover { color:            #088;    }
 	     button { color:            #fdf8ff; }
+.post:after {
+    background-image: linear-gradient(to bottom,
+				      rgba(253,248,255,0),
+				      rgba(253,248,255,1) 85%);
+}
 
 
 /*
@@ -169,6 +173,17 @@ h3, h2, h3  { margin-bottom: 1.33333em;   }
 p           { margin: 0; padding: 0;      }
 .post {
     margin-bottom: 2em;
+    position: relative;
+    z-index: 1;
+}
+.post:after {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 5em;
 }
 .date {
     font-family: "body-bold";
@@ -188,10 +203,12 @@ p           { margin: 0; padding: 0;      }
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    z-index: 5;
 }
 .gen_nav li {
     width: 50%;
     flex: 1 0 auto;
+    z-index: 6;
 }
 img {
     width: 100%;
