--- a/css/gavin.css
+++ b/css/gavin.css
@@ -176,62 +176,64 @@ p           { margin: 0; padding: 0;      }
     position: relative;
     z-index: 1;
 }
+.post img {
+    display: none;
+}
 .post:after {
     content: "";
     position: absolute;
-    z-index: 2;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 5em;
+    z-index:  2;
+    bottom:   0;
+    left:     0;
+    width:    100%;
+    height:   5em;
 }
 .date {
     font-family: "body-bold";
-    float: left;
-    clear: none;
+    float:        left;
+    clear:        none;
 }
 .excerpt {
+    height:     6em;
     max-height: 6em;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    overflow:   hidden;
 }
 .gen_nav {
-    width: 100%;
-    max-width: 34em;
+    width:          100%;
+    max-width:      34em;
     padding-bottom: 1.25em;
-    display: flex;
+    display:        flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    z-index: 5;
+    flex-wrap:      wrap;
+    z-index:        5;
 }
 .gen_nav li {
-    width: 50%;
-    flex: 1 0 auto;
+    width:   50%;
+    flex:    1 0 auto;
     z-index: 6;
 }
 img {
-    width: 100%;
-    max-width:300px;
-    clear: none;
+    width:         100%;
+    max-width:     300px;
+    clear:         none;
     border-radius: 5px;
 }
 p {
     clear: none;
 }
 img:nth-of-type(even) {
-    clear: none;
-    float: right;
+    clear:       none;
+    float:       right;
     margin-left: 1em;
 }
 img:nth-of-type(odd) {
-    clear: none;
-    float: left;
+    clear:        none;
+    float:        left;
     margin-right: 1em;
 }
 blockquote {
-    margin: 2em;
-    padding: 0;
+    margin:      2em;
+    padding:     0;
     font-family: body-italic;
 }
 
@@ -251,8 +253,8 @@ blockquote {
     display: none;
 }
 label {
-    position: absolute;
-    right: 1em; top: 1em;
+    position:         absolute;
+    right: 1em; top:  1em;
     background-color: #fdf8ff;
 }
 .nav {
@@ -264,7 +266,7 @@ label {
     max-height: 30em;
 } 
 .gen_nav {
-    opacity: 0;
+    opacity:    0;
     transition: opacity 2s ease;
 }
 .nav_drop:checked ~ .nav .gen_nav {
@@ -291,8 +293,8 @@ nav ul a { transition-property: color; transition-duration: 1s; }
   opacity: 0;
   animation-duration:  2.75s;
   animation-fill-mode: forwards;
-  animation-name: vhs-top;
-  transform:      translateY(-25vh);
+  animation-name:      vhs-top;
+  transform:           translateY(-25vh);
 }
 @keyframes vhs-top {
    0% { transform: translateY(-25vh); opacity: 0; }
@@ -302,9 +304,9 @@ nav ul a { transition-property: color; transition-duration: 1s; }
 
 .container {
     opacity: 0;
-    animation-duration: 2s;
+    animation-duration:  2s;
     animation-fill-mode: forwards;
-    animation-name: container;
+    animation-name:      container;
 }
 @keyframes container {
     0% { opacity: 0; }
@@ -347,21 +349,21 @@ nav ul a { transition-property: color; transition-duration: 1s; }
 	display: none;
     }
     .nav {
-	max-height: 10em;
-	transition: none;
-	float: right;
-	margin-left: 3em;
+	max-height:    10em;
+	transition:    none;
+	float:         right;
+	margin-left:   3em;
 	padding-right: 1em; 
     }
     .gen_nav {
-	opacity: 1;
-	transition: none;
+	opacity:        1;
+	transition:     none;
 	flex-direction: column;
     }
     .gen_nav li {
 	visibility: visible;
 	transition: none;
-	width: 100%;
+	width:      100%;
     }
 }
 @media ( min-width: 800px ) {
