fixed viewport typo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
       <title>the Weight</title>
       <link rel="stylesheet" type="text/css" href="{{ '/css/gavin.css' | relative_url }}" />
-      <meta name="viewport"  content="width=device=width, initial-scale=1.0" />
+      <meta name="viewport"  content="width=device-width, initial-scale=1.0 maximum-scale=1.0" />
     </head>
     <body class="container">
       {% include header.html %}
